<resources>
    <string name="app_name">listen-my-order</string>
    <string name="btn_stop_listen">Stop Import</string>
    <string name="btn_start_listen">Start Import</string>
    <string name="tv_store_name">Store</string>
    <string name="et_store_name">Input store name</string>
    <string name="tv_title_menu">Menu</string>
    <string name="tv_order_list">Order List</string>
    <string name="tv_total_price">Total Price : </string>
    <string name="btn_export_menu">Export\nMenu</string>
    <string name="btn_export_order">Export\nOrder</string>
    <string name="btn_exporting_order">Exporting\nOrder...</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_add">Add</string>
    <string name="btn_remove">Remove</string>
</resources>

