<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ExportOrderActivity">


    <Button
        android:id="@+id/btn_export_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_export_order"
        android:backgroundTint="@color/iceland_poppy"
        android:textSize="50sp"
        android:layout_margin="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_total_price"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            tools:text="$ 20.0" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_order_list"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_order" />
</LinearLayout>