<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OwnerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="0"
                android:src="@drawable/iv_back" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_export_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_export_menu"
            android:backgroundTint="#0BE881"
            android:textSize="50sp"
            android:layout_margin="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/tv_store_name"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/et_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/et_store_name" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/tv_title_menu"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="25sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="6dp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/rec_rounded_dotted"
                    android:text="+"
                    android:textColor="#000000"
                    android:textStyle="bold"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>